// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core screen snapshots matches budgets screen 1`] = `
<View
  style={
    {
      "gap": 12,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Monthly Budgets
  </Text>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Set category limits so warnings and over-budget alerts stay personal to your goals.
  </Text>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 13,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Last updated: 
    26 Feb, 01:48 am
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Food
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Current limit: 
      Rs 8,000
    </Text>
    <TextInput
      accessibilityLabel="Food monthly limit"
      keyboardType="number-pad"
      onChangeText={[Function]}
      placeholder="Monthly limit"
      placeholderTextColor="#888888"
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 14,
            "borderWidth": 1,
            "color": "#111111",
            "fontSize": 15,
            "height": 48,
            "paddingHorizontal": 16,
          },
          {
            "marginTop": 8,
          },
        ]
      }
      value="8000"
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Transport
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Current limit: 
      Rs 5,000
    </Text>
    <TextInput
      accessibilityLabel="Transport monthly limit"
      keyboardType="number-pad"
      onChangeText={[Function]}
      placeholder="Monthly limit"
      placeholderTextColor="#888888"
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 14,
            "borderWidth": 1,
            "color": "#111111",
            "fontSize": 15,
            "height": 48,
            "paddingHorizontal": 16,
          },
          {
            "marginTop": 8,
          },
        ]
      }
      value="5000"
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Shopping
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Current limit: 
      Rs 7,000
    </Text>
    <TextInput
      accessibilityLabel="Shopping monthly limit"
      keyboardType="number-pad"
      onChangeText={[Function]}
      placeholder="Monthly limit"
      placeholderTextColor="#888888"
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 14,
            "borderWidth": 1,
            "color": "#111111",
            "fontSize": 15,
            "height": 48,
            "paddingHorizontal": 16,
          },
          {
            "marginTop": 8,
          },
        ]
      }
      value="7000"
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Bills
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Current limit: 
      Rs 6,000
    </Text>
    <TextInput
      accessibilityLabel="Bills monthly limit"
      keyboardType="number-pad"
      onChangeText={[Function]}
      placeholder="Monthly limit"
      placeholderTextColor="#888888"
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 14,
            "borderWidth": 1,
            "color": "#111111",
            "fontSize": 15,
            "height": 48,
            "paddingHorizontal": 16,
          },
          {
            "marginTop": 8,
          },
        ]
      }
      value="6000"
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Entertainment
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Current limit: 
      Rs 4,000
    </Text>
    <TextInput
      accessibilityLabel="Entertainment monthly limit"
      keyboardType="number-pad"
      onChangeText={[Function]}
      placeholder="Monthly limit"
      placeholderTextColor="#888888"
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 14,
            "borderWidth": 1,
            "color": "#111111",
            "fontSize": 15,
            "height": 48,
            "paddingHorizontal": 16,
          },
          {
            "marginTop": 8,
          },
        ]
      }
      value="4000"
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Others
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Current limit: 
      Rs 3,000
    </Text>
    <TextInput
      accessibilityLabel="Others monthly limit"
      keyboardType="number-pad"
      onChangeText={[Function]}
      placeholder="Monthly limit"
      placeholderTextColor="#888888"
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 14,
            "borderWidth": 1,
            "color": "#111111",
            "fontSize": 15,
            "height": 48,
            "paddingHorizontal": 16,
          },
          {
            "marginTop": 8,
          },
        ]
      }
      value="3000"
    />
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "height": 46,
              "justifyContent": "center",
              "paddingHorizontal": 20,
            },
            {
              "backgroundColor": "#F0F0F0",
              "borderColor": "#E9E9E9",
              "borderWidth": 1,
            },
            false,
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "letterSpacing": 0.1,
              },
              {
                "color": "#111111",
                "fontSize": 15,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Save Budgets
        </Text>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "height": 46,
              "justifyContent": "center",
              "paddingHorizontal": 20,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E9E9E9",
              "borderWidth": 1,
            },
            false,
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "letterSpacing": 0.1,
              },
              {
                "color": "#5B5B5B",
                "fontSize": 15,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Reset Defaults
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Core screen snapshots matches dashboard screen 1`] = `
<View
  style={
    {
      "gap": 16,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Spend Summary
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          false,
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Day
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#F3F3F3",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#111111",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Week
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          false,
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Month
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Loading dashboard summary...
  </Text>
</View>
`;

exports[`Core screen snapshots matches insights loading state 1`] = `
<View
  style={
    {
      "gap": 16,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Weekly Insights
  </Text>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Loading weekly insight...
  </Text>
</View>
`;

exports[`Core screen snapshots matches onboarding screen 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "gap": 20,
      "padding": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 28,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Sign in to Auto Finance
  </Text>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Verify your phone number with OTP to keep your spending data private and synced.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#FAFAFA",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#111111",
              "fontSize": 11,
              "fontWeight": "700",
            },
            undefined,
          ]
        }
      >
        1. Phone
      </Text>
    </View>
    <View
      style={
        [
          {
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          null,
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#888888",
              "fontSize": 11,
              "fontWeight": "700",
            },
            undefined,
          ]
        }
      >
        2. OTP
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 18,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Welcome back
    </Text>
    <View
      style={
        {
          "gap": 8,
          "marginTop": 12,
        }
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 15,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
      >
        Use your mobile number to receive a secure one-time code.
      </Text>
      <View
        style={
          {
            "gap": 4,
            "marginTop": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "letterSpacing": 0.1,
              },
              {
                "color": "#5B5B5B",
                "fontSize": 13,
                "fontWeight": "500",
              },
              undefined,
            ]
          }
        >
          Mobile number
        </Text>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="phone-pad"
          onChangeText={[Function]}
          placeholder="+919876543210"
          placeholderTextColor="#888888"
          style={
            [
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E9E9E9",
                "borderRadius": 14,
                "borderWidth": 1,
                "color": "#111111",
                "fontSize": 15,
                "height": 48,
                "paddingHorizontal": 16,
              },
              undefined,
            ]
          }
          value=""
        />
        <Text
          style={
            [
              {
                "letterSpacing": 0.1,
              },
              {
                "color": "#888888",
                "fontSize": 11,
                "fontWeight": "500",
              },
              undefined,
            ]
          }
        >
          India format supported: +919876543210 or 9876543210
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 4,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "height": 46,
              "justifyContent": "center",
              "paddingHorizontal": 20,
            },
            {
              "backgroundColor": "#F0F0F0",
              "borderColor": "#E9E9E9",
              "borderWidth": 1,
            },
            false,
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "letterSpacing": 0.1,
              },
              {
                "color": "#111111",
                "fontSize": 15,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Send OTP Code
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Core screen snapshots matches review queue loading state 1`] = `
<View
  style={
    {
      "gap": 12,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Review Queue
  </Text>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Low-confidence transactions need your confirmation.
  </Text>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Loading review queue...
  </Text>
  <View
    style={
      {
        "gap": 12,
      }
    }
  />
</View>
`;

exports[`Core screen snapshots matches settings screen 1`] = `
<View
  style={
    {
      "gap": 16,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Settings & Privacy
  </Text>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Notification Access
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Enabled • Last capture 4m ago
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Data Controls
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Export your data or request full account deletion anytime.
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E9E9E9",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 16,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#111111",
            "fontSize": 15,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Pro
    </Text>
    <Text
      style={
        [
          {
            "letterSpacing": 0.1,
          },
          {
            "color": "#5B5B5B",
            "fontSize": 13,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Advanced AI insights, custom rules, unlimited exports.
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "height": 46,
              "justifyContent": "center",
              "paddingHorizontal": 20,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E9E9E9",
              "borderWidth": 1,
            },
            false,
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "letterSpacing": 0.1,
              },
              {
                "color": "#5B5B5B",
                "fontSize": 15,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Export Data
        </Text>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "height": 46,
              "justifyContent": "center",
              "paddingHorizontal": 20,
            },
            {
              "backgroundColor": "transparent",
            },
            false,
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "letterSpacing": 0.1,
              },
              {
                "color": "#5B5B5B",
                "fontSize": 15,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Delete Account
        </Text>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "height": 46,
              "justifyContent": "center",
              "paddingHorizontal": 20,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E9E9E9",
              "borderWidth": 1,
            },
            false,
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "letterSpacing": 0.1,
              },
              {
                "color": "#5B5B5B",
                "fontSize": 15,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Sign Out
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Core screen snapshots matches transactions screen 1`] = `
<View
  style={
    {
      "gap": 16,
      "paddingBottom": 24,
    }
  }
>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#111111",
          "fontSize": 22,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    Transactions
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#F3F3F3",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#111111",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        All
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#F3F3F3",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#111111",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        All types
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          false,
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Debits
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E9E9E9",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          false,
        ]
      }
    >
      <Text
        style={
          [
            {
              "letterSpacing": 0.1,
            },
            {
              "color": "#5B5B5B",
              "fontSize": 13,
              "fontWeight": "600",
            },
            undefined,
          ]
        }
      >
        Credits
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "letterSpacing": 0.1,
        },
        {
          "color": "#5B5B5B",
          "fontSize": 15,
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Loading transactions...
  </Text>
  <View
    style={
      {
        "gap": 12,
      }
    }
  />
</View>
`;
